--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ app:
   port: ${server.port}
 spring:
   datasource:
-    url: jdbc:mysql://${dbs.database.host}:3306/jxmall?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://${dbs.database.host}:${dbs.database.port}/jxmall?useUnicode=true&characterEncoding=utf-8
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
